# tauri-dashboard

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/tauri-app-resources/: SKILL.md
.claude/skills/tauri-architecture/: SKILL.md
.claude/skills/tauri-capabilities/: SKILL.md
.claude/skills/tauri-plugins/: SKILL.md
.claude/skills/tauri-project-setup/: SKILL.md
.claude/skills/tauri-system-tray/: SKILL.md
.claude/skills/tauri-testing/: SKILL.md
.claude/skills/tauri-windows-distribution/: SKILL.md
.github/workflows/: release.yml
docs/: _config.yml  index.md
docs/pages/: claude-code.md  data-flow.md  development.md  http-api.md
docs/plans/completed/: 2026-04-19_18-43-electron-to-tauri-migration.md  2026-04-20_14-42_fix-startup-window-flash-top-left-white-saved-position-dark.md  2026-04-20_16-21_add-remove-session-hover-button.md  2026-04-20_17-33_add-hide-to-tray-button-in-window-header.md  2026-04-20_19-14_telegram-notifications-move-under-dashboard-control.md  2026-04-20_22-01_dashboard-header-claude-code-5h-7d-limit-pills.md  (+2 more)
integrations/: claude_hook.py
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  auto_resize.rs  commands.rs  config.rs  config_watcher.rs  http_server.rs  label_policy.rs  lib.rs  log_watcher.rs  logging.rs  main.rs  notifications.rs  state.rs  telegram.rs  tray.rs  usage_limits.rs
src-tauri/src/adapters/: claude.rs
src/lib/: api.ts  mockSessions.ts  types.ts
tests/: test_claude_hook.py
(+7 files in other folders)
