[package]
name = "ai-agent-dashboard"
version = "0.1.0"
description = "AI Agent Dashboard - always-on-top widget for tracking AI coding agents"
authors = ["Oleg Savelyev"]
edition = "2021"

[lib]
name = "ai_agent_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
